# accounts-generator

./: README.md  pyproject.toml  requirements.txt  run.py  setup.py
accounts_generator/: __init__.py  account_generator.py  check_availability.py  chrome_driver.py  instagram_account_generator.py  outlook_account_generator.py  search_mails.py
generate_email/: __init__.py  account_generator.py  fake_account_data.py  proxy_generator.py  user_agent_handler.py
