[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accounts-generator"
version = "0.1.0"
description = "Account Generator with Browser Automation"
authors = [{name = "Shubham Garg", email = "shubham.garg21@outlook.com"}]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    'selenium',
    'playwright',
    'requests',
    'selenium-stealth',
    'random-password-generator',
    'Faker',
    'lxml',
    'fake-headers',
    'pillow'
]
[project.urls]
homepage = "https://github.com/shubhamgarg21/accounts-generator"
repository = "https://github.com/shubhamgarg21/accounts-generator"
documentation = "https://github.com/shubhamgarg21/accounts-generator"